--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="build/main.css">
 </head>
 <body>
-	<div id="root" class="wrapper">
+	<div id="root" class="wrapper card__container">
 		<div class="card">
 			<h3 class="card__title">Добавление новой книги</h3>
 
@@ -33,12 +33,12 @@
 
 			<ul class="list">
 				<li class="list__item" data-id="1">
-					<h5 class="list__title">Название книги</h5>
-					<p class="list__subtitle">Автор</p>
 					<div class="list__actions">
 						<a class="list__button">Изменить</a>
 						<a class="list__button list__button--remove">Удалить</a>
 					</div>
+					<h5 class="list__title">Название книги</h5>
+					<p class="list__subtitle">Автор</p>
 				</li>
 			</ul>
 		</div>
