стили при пустом списке

--- a/public/index.html
+++ b/public/index.html
@@ -31,16 +31,7 @@
 		<div class="card">
 			<h3 class="card__title">Сохраненные книги</h3>
 
-			<ul class="list">
-				<li class="list__item" data-id="1">
-					<div class="list__actions">
-						<a class="list__button">Изменить</a>
-						<a class="list__button list__button--remove">Удалить</a>
-					</div>
-					<h5 class="list__title">Название книги</h5>
-					<p class="list__subtitle">Автор</p>
-				</li>
-			</ul>
+			<ul class="list"></ul>
 		</div>
 	</div>
 	<script src="build/main.js"></script>
