переход в режим редактирования (базовое)

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div id="book-manager" class="wrapper card__container">
 		<div class="card">
-			<h3 class="card__title">Добавление новой книги</h3>
+			<h3 class="card__title js-form-title">Добавление новой книги</h3>
 
 			<label for="author" class="form__label">Автор</label>
 			<input id="author" name="author" type="text" class="form__field">
