кнопка отмены редактирования

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
 
 			<input type="hidden" name="id" value="0">
 			<button class="form__submit js-book-submit">Добавить</button>
+			<button class="form__cancel js-book-cancel" style="display: none;">Отменить</button>
 		</div>
 
 		<div class="card">
